# libeuicc-go

./: .gitignore  CMakeLists.txt  README.md  apdu.go  chip.go  constant.go  copy.sh  discover.go  discovery.go  download.go  es9p.c  example.go  go.mod  http.go  libeuicc.go  logger.go  notification.go  pcsc.go  profile.go  util.go
driver/pcsc/: go.mod  go.sum  pcsc.go
driver/qmi/: go.mod  go.sum  qmi.c  qmi.go  qmi.h
example/: go.mod  go.sum  main.go
examples/: main.go
